--- a/common.css
+++ b/common.css
@@ -25,5 +25,25 @@
     transform: rotateZ(180deg);
 }
 
+<div class="ellipsis">
+    单行文本css溢出部分css溢出部分css溢出部分css溢出部分css溢出部分css溢出部分css溢出部分
+</div>
+//多行文本溢出
+.ellipsis{//单行文本溢出
+  overflow: hidden;
+  text-overflow:ellipsis;//文本溢出显示省略号
+  white-space:nowrap;//文本不会换行（单行文本溢出）
+  width:130px;
+  background-color: red;
+}
+.mult_line_ellipsis{//多行文本溢出
+  overflow: hidden;
+  text-overflow:ellipsis;//文本溢出显示省略号
+  display: -webkit-box;
+  -webkit-line-clamp: 3;
+  -webkit-box-orient: vertical;
+  width:130px;
+  background-color:cornflowerblue;
+}
 
 
